k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petproject
  labels:
    app: petproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petproject
  template:
    metadata:
      labels:
        app: petproject
    spec:
      containers:
        - name: petproject
          image: mekcc/petproject:0.0.1
          ports:
            - containerPort: 8080
