k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petproject
spec:
  selector:
    app.kubernetes.io/name: petproject
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
